--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
     <h1><a href="/"> My Webstie </a></h1>
     <ul>
-        <li>my projects</li>
+        <li><a href="/Projects"> My Projects</a></li>
         <li><a href="/about"> About me</a></li>
         <li>contact</li>
     </ul>
